--- a/RailWorld/RailWorld.csproj
+++ b/RailWorld/RailWorld.csproj
@@ -4,7 +4,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<GameVersion>1.18-rc.6</GameVersion>
+		<GameVersion>1.18.1</GameVersion>
 	</PropertyGroup>
 
 	<PropertyGroup>
